<resources>
    <string name="app_name">Personal Finance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_new_trans">Transaksi Baru</string>
    <string name="title_update_trans">Update Transaksi</string>
    <string name="text_nominal">Nominal</string>
    <string name="text_kategori">Pilih Kategori</string>
    <string name="text_keterangan">Keterangan</string>
    <string name="text_tanggal">Tanggal</string>

    <string name="title_new_budget">Anggaran Baru</string>
    <string name="title_update_budget">Update Anggaran</string>

    <string name="title_simpanan_new">Tambah Simpanan Baru</string>
    <string name="text_nama_simpanan">Deskripsi Simpanan</string>
    <string name="text_nominal_target_simpanan">Nominal Target</string>
    <string name="title_update_simpanan">Update Simpanan</string>
    <string name="title_simpan_dana">Simpan Dana</string>
    <string name="title_ambil_dana">Ambil Dana</string>

    <string name="nama_kategori">Nama Kategori</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pemasukan">Pemasukan</string>
</resources>
