<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCategoryIco"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_cat_netral" />

                <EditText
                    android:id="@+id/txtCategoryDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/nama_kategori"
                    android:inputType="textCapWords"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_marginTop="4dp"
                    android:id="@+id/radioCategType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <RadioButton
                        android:id="@+id/radioOutcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengeluaran"
                        android:checked="true" />

                    <RadioButton
                        android:layout_marginTop="8dp"
                        android:id="@+id/radioIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemasukan" />

                </RadioGroup>
            </LinearLayout>

            <!--hidden param -->
            <EditText
                android:id="@+id/txtIdCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <!--end hidden param -->


        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>


