<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDate"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_calendar" />

            <EditText
                android:id="@+id/txtTgl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_tanggal"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:onClick="showCategoryChoice">

            <ImageView
                android:id="@+id/imgCateg"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_cat_form"
                android:onClick="showCategoryChoice"/>

            <EditText
                android:id="@+id/txtKat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_kategori"
                android:onClick="showCategoryChoice"
                android:editable="false"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAmount"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_price" />

            <EditText
                android:id="@+id/txtNominal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_nominal"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDesc"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_detail" />

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_keterangan"
                android:inputType="textMultiLine|textCapWords" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="  Hapus Transaksi"
            android:id="@+id/btnDelete"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_remove_circle"/>

        <!--hidden param -->
        <EditText
            android:id="@+id/txtIdKat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/txtTypeKat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/txtIdTrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <!--end hidden param -->


    </LinearLayout>


</android.support.v7.widget.CardView>



