<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgSavingIco"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_saving" />

                <EditText
                    android:id="@+id/txtSavingDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/text_nama_simpanan"
                    android:inputType="textCapWords"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAmount"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_price" />

                <EditText
                    android:id="@+id/txtNominal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/text_nominal_target_simpanan"
                    android:inputType="number"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutSavingAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btnDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="depositSaving"
                    android:text="@string/title_simpan_dana"
                    android:layout_marginRight="8dp"
                    android:textAllCaps="false"
                    android:width="130dp"
                    android:drawableTop="@drawable/ic_deposit"
                    android:textColor="#8e44ad"/>

                <Button
                    android:layout_toRightOf="@id/btnDeposit"
                    android:id="@+id/btnWithdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="withdrawSaving"
                    android:text="@string/title_ambil_dana"
                    android:textAllCaps="false"
                    android:width="130dp"
                    android:drawableTop="@drawable/ic_withdraw"
                    android:textColor="#8e44ad"/>



            </RelativeLayout>

            <!--hidden param -->
            <EditText
                android:id="@+id/txtIdSaving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <!--end hidden param -->


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingBottom="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvListTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>


</LinearLayout>


